--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -58,23 +58,36 @@
   }
 
   &:nth-child(1):hover {
-    background: linear-gradient(140deg, rgb(51, 143, 200), rgb(250, 216, 216), rgb(255, 105, 180));
+    background-image: linear-gradient(90deg,
+            rgb(197, 249, 186),
+            rgb(253, 195, 207),
+            rgb(236, 210, 254),
+            rgb(189, 218, 248));    background-size: 300% 300%;
+    animation: gradient 10s ease infinite;
   }
 
   &:nth-child(2):hover {
-    background: linear-gradient(-280deg, rgb(216, 224, 221), rgb(135, 206, 250), rgb(242, 163, 202));
+    background: linear-gradient(-140deg, rgb(216, 224, 221), rgb(135, 206, 250), rgb(242, 163, 202));
+    background-size: 300% 300%;
+    animation: gradient 7.5s ease infinite;
   }
 
   &:nth-child(3):hover {
     background: linear-gradient(-140deg, rgb(255, 105, 180), rgb(173, 216, 230), rgb(235, 251, 255));
+    background-size: 300% 300%;
+    animation: gradient 7.5s ease infinite;
   }
 
   &:nth-child(4):hover {
-    background: linear-gradient(100deg, rgb(242, 163, 202), rgb(203, 226, 233), rgb(77, 148, 241), );
+    background: linear-gradient(100deg, rgb(242, 163, 202), rgb(203, 226, 233), rgb(77, 148, 241) );
+    background-size: 300% 300%;
+    animation: gradient 7.5s ease infinite;
   }
 
   &:nth-child(5):hover {
     background: linear-gradient(140deg, rgb(135, 206, 250), rgb(191, 119, 155), rgb(228, 245, 252));
+    background-size: 300% 300%;
+    animation: gradient 7.5s ease infinite;
   }
 
 
@@ -101,6 +114,27 @@
   margin-top: 42vh;
 }
 
+
+.slot-item-one {
+  margin-top: 15vh;
+}
+
+.slot-item-two {
+  margin-top: 30vh;
+}
+
+.slot-item-three {
+  margin-top: 45vh;
+}
+
+.slot-item-four {
+  margin-top: 60vh;
+}
+
+.slot-item-five {
+  margin-top: 75vh;
+}
+
 .menu__slot:hover div.blackscreen {
   animation: fadeOut .5s ease-in reverse;
 }
@@ -125,6 +159,7 @@
 .menu__slot:hover .turing {
   background-image: url('./turing.png');
   background-position: 40% -100px;
+ 
 }
 
 .menu__slot:hover .hopper {
@@ -182,12 +217,6 @@
 .menu__slot:hover .matsumoto {
   background-image: url('./matsumoto.png');
   background-position: 45% -70px;
-  filter: grayscale(100%);
-}
-
-.menu__slot:hover .vanrossum {
-  background-image: url('./vanrossum.png');
-  background-position: 50% 0px;
   filter: grayscale(100%);
 }
 
@@ -250,7 +279,8 @@
   text-transform: uppercase;
   position: relative;
   text-align: center;
-  color: #45758C;
+  // color: #45758C;
+  color: #bbbbbb;
   background-color: rgba(45, 51, 61, 0.8);
   padding: 3.6% 5%;
   font-size: 2em;
@@ -266,7 +296,8 @@
   min-width: 80%;
   max-width: 80%;
   text-align: left;
-  color: #79D9FF;
+  // color: #79D9FF;
+  color: #f4f4f4;
 }
 
 .menu__slot p {
