--- a/client/src/components/Auth/Auth.scss
+++ b/client/src/components/Auth/Auth.scss
@@ -28,3 +28,32 @@
   .second {
       text-align: left;
   }
+
+
+  .t-one {
+    color: red;
+  }
+
+  .t-two {
+    color: rgb(86, 198, 86);
+  }
+
+  .t-three{
+    color: blue;
+  }
+
+  .t-four{
+    color: rgb(141, 27, 247);
+  }
+
+  .t-five{
+    color: orange;
+  }
+
+  .t-six{
+    color: cyan;
+  }
+
+  .t-seven{
+    color: rgb(210, 6, 210);
+  }
