updated menu colors

--- a/client/src/components/Auth/SignUp/SignUp.scss
+++ b/client/src/components/Auth/SignUp/SignUp.scss
@@ -24,7 +24,11 @@
   text-transform: uppercase;
   position: relative;
   text-align: center;
-  color: #45758C;
+  // color: #45758C;
+  // color: #bbbbbb;
+  color: #f4f4f4; 
+
+
   background-color: rgba(45, 51, 61, 0.8);
   padding: 3.6% 5%;
   font-size: 2em;
@@ -40,7 +44,10 @@
   min-width: 80%;
   max-width: 80%;
   text-align: left;
-  color: #79D9FF;
+  // color: #79D9FF;
+  // color: #bbbbbb;
+  color: #f4f4f4; 
+
 }
 
 
