--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,7 +1,7 @@
 .user-identification {
   position: fixed;
   opacity: 100;
-  color: #45758C;
+  color: #bbbbbb;
   z-index: 150000;
   margin-left: 83.5%;
   cursor: default;
