--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -1,7 +1,8 @@
 .user-identification{
     position: fixed;
     opacity: 100;
-    color:#45758C;
+    // color:#45758C;
+    color: #bbbbbb;
     z-index: 150000;
     margin-left: 83.5%;
     cursor: default;
