--- a/client/src/components/Auth/LogIn/LogIn.css
+++ b/client/src/components/Auth/LogIn/LogIn.css
@@ -40,7 +40,7 @@
   text-transform: uppercase;
   position: relative;
   text-align: center;
-  color: #45758C;
+  color: #f4f4f4;
   background-color: rgba(45, 51, 61, 0.8);
   padding: 3.6% 5%;
   font-size: 2em;
@@ -56,7 +56,7 @@
   min-width: 80%;
   max-width: 80%;
   text-align: left;
-  color: #79D9FF;
+  color: #f4f4f4;
 }
 
 .login-input {
@@ -90,7 +90,7 @@
 
 .login-button:hover {
   border: 1px solid transparent;
-  color: #79D9FF;
+  color: #f4f4f4;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
