--- a/client/src/components/Auth/LogIn/LogIn.scss
+++ b/client/src/components/Auth/LogIn/LogIn.scss
@@ -30,7 +30,10 @@
   text-transform: uppercase;
   position: relative;
   text-align: center;
-  color: #45758C;
+  // color: #45758C;
+  // color: #bbbbbb;
+  color: #f4f4f4; 
+
   background-color: rgba(45, 51, 61, 0.8);
   padding: 3.6% 5%;
   font-size: 2em;
@@ -46,7 +49,9 @@
   min-width: 80%;
   max-width: 80%;
   text-align: left;
-  color: #79D9FF;
+  // color: #79D9FF;
+  color: #f4f4f4; 
+
 }
 
 
@@ -77,7 +82,9 @@
 
   &:hover{
 	border: 1px solid transparent;
-  color: #79D9FF;
+  // color: #79D9FF;
+  color: #f4f4f4; 
+
   transition: .5s ease;
 }
  &:active{
