--- a/client/src/components/Auth/SignUp/SignUp.css
+++ b/client/src/components/Auth/SignUp/SignUp.css
@@ -25,7 +25,7 @@
   text-transform: uppercase;
   position: relative;
   text-align: center;
-  color: #45758C;
+  color: #f4f4f4;
   background-color: rgba(45, 51, 61, 0.8);
   padding: 3.6% 5%;
   font-size: 2em;
@@ -41,7 +41,7 @@
   min-width: 80%;
   max-width: 80%;
   text-align: left;
-  color: #79D9FF;
+  color: #f4f4f4;
 }
 
 .signup-input {
