--- a/client/src/components/Collection/OpenPacks/OpenPacks.css
+++ b/client/src/components/Collection/OpenPacks/OpenPacks.css
@@ -50,6 +50,14 @@
   min-width: 20%;
   max-width: 20%;
   text-align: left;
-  color: #79D9FF;
+  color: #bbbbbb;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+
+.back_button > div > h3:hover {
+  color: #f4f4f4;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 /*# sourceMappingURL=OpenPacks.css.map */
