--- a/client/src/components/Collection/YourCards/YourCards.css
+++ b/client/src/components/Collection/YourCards/YourCards.css
@@ -64,7 +64,15 @@
   min-width: 20%;
   max-width: 20%;
   text-align: left;
-  color: #79D9FF;
+  color: #bbbbbb;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+
+.back_button-yc > div > h3:hover {
+  color: #f4f4f4;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
 }
 
 .yourCards-filter-container {
