--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -17,6 +17,8 @@
     align-content: center;
     transition: .5s ease;
     color: transparent;
+    font-family: 'Ubuntu Mono', monospace;
+
 
 
     &:hover{
