--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -3,8 +3,9 @@
   opacity: 100;
   color: #bbbbbb;
   z-index: 150000;
-  margin-left: 83.5%;
+  margin-left: 80.5%;
   cursor: default;
+  font-family: 'Ubuntu Mono', monospace;
 }
 
 .hidden {
