--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -4,8 +4,9 @@
     // color:#45758C;
     color: #bbbbbb;
     z-index: 150000;
-    margin-left: 83.5%;
+    margin-left: 80.5%;
     cursor: default;
+    font-family: 'Ubuntu Mono', monospace;
 }
 
 .hidden{
