--- a/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
+++ b/client/src/components/Collection/OpenPacks/PackToOpen/PackToOpen.css
@@ -11,6 +11,7 @@
   border-radius: 10px;
   -webkit-transition: .5s ease;
   transition: .5s ease;
+  font-family: 'Ubuntu Mono', monospace;
 }
 
 .pack:hover {
@@ -69,29 +70,18 @@
 }
 
 .pack-count {
-  font-size: 12vh;
+  font-size: 13.5vh;
   margin-bottom: 7.25vh;
   margin-top: 6.75vh;
   font-weight: bold;
   -webkit-transition: .5s ease;
   transition: .5s ease;
   z-index: 10;
-}
-
-.pack-count:hover {
-  color: rgba(255, 255, 255, 0.871);
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-}
-
-.pack-count:active {
-  color: #79D9FF;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
+  font-family: 'Ubuntu Mono', monospace;
 }
 
 .pack-title {
-  font-size: larger;
+  font-size: 2.75vh;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.384);
 }
