--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,100;0,700;1,400;1,700&display=swap");
 #bg-video {
   position: fixed;
   overflow: hidden;
@@ -311,6 +312,7 @@
   z-index: 1;
   background-image: url("./led-grid.png");
   background-size: cover;
+  font-family: 'Ubuntu Mono', monospace;
 }
 
 .menu__slot:hover > div > h3 {
@@ -320,6 +322,7 @@
   max-width: 80%;
   text-align: left;
   color: #f4f4f4;
+  font-family: 'Ubuntu Mono', monospace;
 }
 
 .menu__slot p {
@@ -327,9 +330,9 @@
   position: relative;
   z-index: 1;
   line-height: 1.5em;
-  color: #fff;
-  font-weight: 400;
-  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff984400, 0 0 0.5em #ff984400, 0 0 0.1em #ff984400, 0 1px 3px #000;
+  color: white;
+  font-weight: 500;
+  text-shadow: 0 1px 3px #000;
 }
 
 .menu__slot:hover > div > p {
