--- a/client/src/components/Auth/SignUp/SignUp.scss
+++ b/client/src/components/Auth/SignUp/SignUp.scss
@@ -58,7 +58,8 @@
 	margin: 8px 0;
 	width: 100%;
   z-index: 100;
-  color: #fff
+  color: #fff;
+  font-size: larger;
 }
 
 .signup-button {
@@ -97,13 +98,11 @@
 	background-color: rgb(53, 51, 51);
 	border: none;
 	padding: 12px 15px;
-	// margin: 8px 4px;
-	/* margin-right: 2.5%; */
 	width: 45%;
-  color: #fff
+  color: #fff;
+  font-size: larger;
 }
 
 .signup-input-name:nth-child(1) {
-  // margin-left: .75%;
   margin-right: .5%;
 }
