--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -61,33 +61,51 @@
 
   &:nth-child(1):hover {
     background-image: linear-gradient(90deg,
-            rgb(197, 249, 186),
-            rgb(253, 195, 207),
-            rgb(236, 210, 254),
-            rgb(189, 218, 248));    background-size: 300% 300%;
+        rgb(197, 249, 186),
+        rgb(253, 195, 207),
+        rgb(236, 210, 254),
+        rgb(189, 218, 248));
+    background-size: 300% 300%;
     animation: gradient 10s ease infinite;
   }
 
   &:nth-child(2):hover {
-    background: linear-gradient(-140deg, rgb(216, 224, 221), rgb(135, 206, 250), rgb(242, 163, 202));
+    background-image: linear-gradient(90deg,
+        rgb(236, 210, 254),
+        rgb(189, 218, 248),
+      rgb(197, 249, 186),
+      rgb(253, 195, 207));
     background-size: 300% 300%;
     animation: gradient 7.5s ease infinite;
   }
 
   &:nth-child(3):hover {
-    background: linear-gradient(-140deg, rgb(255, 105, 180), rgb(173, 216, 230), rgb(235, 251, 255));
+    background-image: linear-gradient(90deg,
+        rgb(197, 249, 186),
+        rgb(189, 218, 248),
+      rgb(236, 210, 254),
+      rgb(253, 195, 207));
     background-size: 300% 300%;
     animation: gradient 7.5s ease infinite;
   }
 
   &:nth-child(4):hover {
-    background: linear-gradient(100deg, rgb(242, 163, 202), rgb(203, 226, 233), rgb(77, 148, 241) );
-    background-size: 300% 300%;
+    background-image: linear-gradient(90deg,
+    rgb(253, 195, 207),
+        rgb(197, 249, 186),
+      rgb(236, 210, 254),
+      rgb(189, 218, 248)); 
+      background-size: 300% 300%;
     animation: gradient 7.5s ease infinite;
   }
 
   &:nth-child(5):hover {
-    background: linear-gradient(140deg, rgb(135, 206, 250), rgb(191, 119, 155), rgb(228, 245, 252));
+    background-image: linear-gradient(90deg,
+    rgb(189, 218, 248),
+    rgb(253, 195, 207),
+      rgb(197, 249, 186),
+      rgb(236, 210, 254)
+      ); 
     background-size: 300% 300%;
     animation: gradient 7.5s ease infinite;
   }
@@ -161,7 +179,7 @@
 .menu__slot:hover .turing {
   background-image: url('./turing.png');
   background-position: 40% -100px;
- 
+
 }
 
 .menu__slot:hover .hopper {
@@ -305,6 +323,12 @@
   font-family: 'Ubuntu Mono', monospace;
 
 }
+.menu__slot:active>div>h3 {
+  color: rgb(45, 46, 45);
+  // color: rgb(86, 198, 86);
+  transition: 0.25s ease;
+
+}
 
 .menu__slot p {
   opacity: 0;
@@ -313,7 +337,7 @@
   line-height: 1.5em;
   color: rgb(255, 255, 255);
   font-weight: 500;
-  text-shadow:  0 1px 3px #000;
+  text-shadow: 0 1px 3px #000;
 }
 
 .menu__slot:hover>div>p {
