--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -68,7 +68,8 @@
     margin-bottom: -5%;
     display: flex;
     flex-direction: row;
-    color: rgba(65, 65, 65, 0.729);
+    // color: rgba(65, 65, 65, 0.729);
+    color: rgba(102, 102, 102, 0.747);
     top: 25%;
 }
 
