--- a/client/src/components/Auth/Auth.scss
+++ b/client/src/components/Auth/Auth.scss
@@ -28,12 +28,10 @@
 
   .first {
     text-align: right;
-    // color: rgb(86, 198, 86) !important;
   }
 
   .second {
       text-align: left;
-      // color: rgb(86, 198, 86) !important;
   }
 
 
@@ -64,3 +62,21 @@
   // .t-seven{
   //   color: rgb(210, 6, 210);
   // }
+
+  .t-eight{
+    animation: blink 
+    1.45s linear infinite;  }
+
+  @keyframes blink {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0.7;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
