--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -64,6 +64,7 @@
 }
 
 .yourCards-filter-container {
+    z-index: 5;
     margin-top: 3.5%;
     margin-bottom: -5%;
     display: flex;
@@ -139,5 +140,21 @@
     color: #fff;
     padding-left: 1.5%;
     padding-right: -2%;
+
+}
+
+
+.yourCards-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right:0; 
+    background-color: rgba(56, 55, 55, 0.406);
+    transition: 1s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
