--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -275,8 +275,8 @@
   filter: grayscale(100%);
 }
 
-.menu__slot:hover .eich {
-  background-image: url('./eich.png');
+.menu__slot:hover .miguel {
+  background-image: url('./miguel.png');
   background-position: 25% -10px;
   filter: grayscale(100%);
 }
