created card information modal that opens when a card is clicked

--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -4,6 +4,7 @@
           transform: scale(1);
   -webkit-perspective: 600px;
           perspective: 600px;
+  cursor: pointer;
   background-color: #6d6d6d;
   width: 15vw;
   height: 38.125vh;
