--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -3,7 +3,7 @@
     margin: 4px;
     transform: scale(1);
     perspective: 600px;
-    // cursor: pointer;
+    cursor: pointer;
     background-color: rgb(109, 109, 109);
     // width: 10.65vw;
     // height: 27vh;
