--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -91,5 +91,27 @@
     perspective: 600px;
     border-radius: 5px;
     transition: .5s ease;
+    display: flex;
+    flex-direction: column;
+    // font-family: 'Ubuntu Mono', monospace;
+    // justify-content: center;
+    // align-items: center;
+}
+
+.history-title{
+    align-self: center;
+    color: rgb(56, 56, 56);
+    text-transform: uppercase;
+}
+
+
+.history-list {
+    display: flex;
+    flex-direction: column;
+    height: 70%;
+    width: 100%;
+    background-color: black;
+    color:rgb(56, 56, 56);
+    text-transform: uppercase;
 
 }
