--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
@@ -140,9 +140,10 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 70%;
+  height: 60%;
   width: 100%;
-  background-color: black;
+  background-color: #5f5f5f;
+  border-radius: 5px;
   color: #383838;
   text-transform: uppercase;
 }
