--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -57,7 +57,7 @@
 }
 
 .charCard .charCard-name {
-  font-size: smaller;
+  font-size: small;
   margin-top: 2%;
   margin-bottom: 0.75%;
 }
@@ -66,6 +66,7 @@
   font-size: x-small;
   margin-top: 2%;
   margin-bottom: 0.75%;
+  font-weight: 200;
 }
 
 .charCard .charCard-id {
@@ -73,6 +74,7 @@
   margin-top: 2%;
   margin-bottom: 0.75%;
   text-transform: none;
+  font-weight: 200;
 }
 
 .bronze {
