--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
@@ -107,7 +107,7 @@
   margin-left: -25%;
   width: 27vw;
   height: 38.125vh;
-  background-color: #6d6d6d;
+  background-color: #515151;
   -webkit-transform: scale(1.75);
           transform: scale(1.75);
   -webkit-perspective: 600px;
@@ -128,8 +128,33 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  color: #383838;
+  color: #282828;
   text-transform: uppercase;
+  font-size: large;
+  margin-bottom: .5%;
+}
+
+.history-summary {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  color: #1e1e1e;
+  text-transform: uppercase;
+  font-size: 70%;
+  font-weight: 300;
+}
+
+.history-summary b {
+  color: #828282;
 }
 
 .history-list {
@@ -142,9 +167,41 @@
           flex-direction: column;
   height: 60%;
   width: 100%;
-  background-color: #5f5f5f;
-  border-radius: 5px;
+  background-color: #1d1d1d;
   color: #383838;
   text-transform: uppercase;
+}
+
+.tx-graph {
+  width: 190%;
+  overflow-x: hidden;
+  margin-left: -32.5%;
+}
+
+.history-tab {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  height: 5vh;
+  font-size: larger;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  padding-top: .75%;
+  margin-right: 7.5%;
+  color: rgba(102, 102, 102, 0.747);
+}
+
+.history-tab:hover {
+  cursor: pointer;
+}
+
+.history-tab:active {
+  color: #45758C;
+}
+
+.selected {
+  color: #fff;
 }
 /*# sourceMappingURL=CardInformation.css.map */
