--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
@@ -178,19 +178,34 @@
   margin-left: -32.5%;
 }
 
+.history-tabs-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  background-color: #2f2f2f;
+}
+
 .history-tab {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
   -ms-grid-column-align: center;
       justify-self: center;
-  height: 5vh;
-  font-size: larger;
+  height: 2vh;
+  font-size: 70%;
   -webkit-transition: .5s ease;
   transition: .5s ease;
   padding-top: .75%;
-  margin-right: 7.5%;
-  color: rgba(102, 102, 102, 0.747);
+  background-color: #2f2f2f;
+  color: #555555;
 }
 
 .history-tab:hover {
@@ -202,6 +217,6 @@
 }
 
 .selected {
-  color: #fff;
+  color: rgba(255, 255, 255, 0.823);
 }
 /*# sourceMappingURL=CardInformation.css.map */
