added tx row with styling

--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
@@ -219,4 +219,13 @@
 .selected {
   color: rgba(255, 255, 255, 0.823);
 }
+
+.transaction-row {
+  font-size: 75%;
+  margin-left: 2.5%;
+}
+
+.transaction-row b {
+  color: #828282;
+}
 /*# sourceMappingURL=CardInformation.css.map */
