--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -169,3 +169,11 @@ background-color: rgb(47, 47, 47);
 .selected {
     color: rgba(255, 255, 255, 0.823)
 }
+
+.transaction-row{
+    font-size: 75%;
+    margin-left: 2.5%;
+    b{
+        color: rgb(130,130,130);
+    }
+}
