--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -116,7 +116,7 @@
     font-size: 70% ;
     font-weight: 300;
      b{
-         color: rgb(130,130,130);
+         color: rgb(175, 175, 175);
      }
 }
 
