minor adjustment to tx row styling

--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
@@ -228,4 +228,8 @@
 .transaction-row b {
   color: #828282;
 }
+
+.transaction-row.start {
+  margin-top: 1%;
+}
 /*# sourceMappingURL=CardInformation.css.map */
