--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -176,4 +176,8 @@ background-color: rgb(47, 47, 47);
     b{
         color: rgb(130,130,130);
     }
+    &.start {
+        margin-top: 1%;
+    }
+
 }
