fixed graph sizing issues and added conditional styling

--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -134,7 +134,7 @@
 
 
 .tx-graph{
-    width: 190%;
+    // width: 190%;
     // background-color: #f4f4f4;
     overflow-x: hidden;
     margin-left: -32.5%;
