--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -1,9 +1,9 @@
-.overlay{
+.overlay {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    right:0; 
+    right: 0;
     background-color: rgba(0, 0, 0, 0.573);
     z-index: 100;
     transition: 1s ease;
@@ -13,56 +13,15 @@
     align-items: center;
 }
 
-.modal{
-    position: fixed; 
-    top: 50%; 
-    left: 50%; 
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     padding: 50px;
     z-index: 1000;
     background-color: white;
- }
- 
-
-.button {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-content: space-evenly;
-    align-items: space-around;
-    position: absolute;
-    cursor: pointer;
-    background-color: rgba(45, 51, 61, 0.8);
-    background-image: url('./led-grid.png');
-    // color: #79D9FF;
-    color: #bbbbbb;
-    border: none;
-    transition: .5s;
-    font-family: 'Ubuntu Mono', monospace;
-    text-transform: uppercase;
-
-    padding: 3% 4%;
-    font-size: 1.5em;
-    font-weight: 300;
-    margin-top: 45%;
-
-    &.openPacks{
-        margin-left: 72.5%;
-    }
-
-    &.goToDeck{
-        margin-left: -72.5%;
-    }
-    
-    &:hover{
-               color: #f4f4f4; 
-               transition: .5s ease;
-    }
-
-
-
 }
-
 
 .cardInformation-container {
     display: flex;
@@ -73,20 +32,20 @@
 }
 
 
-.selectedCard{
+.selectedCard {
     transform: scale(1.75);
 
-    :hover{
+    :hover {
         transform: scale(1);
     }
 }
 
 
-.market-information-container{
+.market-information-container {
     margin-left: -25%;
     width: 27vw;
     height: 38.125vh;
-    background-color:rgb(81, 81, 81);
+    background-color: rgb(81, 81, 81);
     transform: scale(1.75);
     perspective: 600px;
     border-radius: 5px;
@@ -98,7 +57,7 @@
     // align-items: center;
 }
 
-.history-title{
+.history-title {
     align-self: center;
     color: rgb(40, 40, 40);
     text-transform: uppercase;
@@ -106,18 +65,19 @@
     margin-bottom: .5%;
 }
 
-.history-summary{
+.history-summary {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;
     color: rgb(30, 30, 30);
     text-transform: uppercase;
-    font-size: 70% ;
+    font-size: 70%;
     font-weight: 300;
-     b{
-         color: rgb(175, 175, 175);
-     }
+
+    b {
+        color: rgb(175, 175, 175);
+    }
 }
 
 .history-list {
@@ -127,25 +87,25 @@
     width: 100%;
     background-color: rgb(29, 29, 29);
     // border-radius: 5px;
-    color:rgb(56, 56, 56);
+    color: rgb(56, 56, 56);
     text-transform: uppercase;
 
 }
 
 
-.tx-graph{
+.tx-graph {
     // width: 190%;
     // background-color: #f4f4f4;
     overflow-x: hidden;
     margin-left: -32.5%;
 }
 
-.history-tabs-container{
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-align-content: center;
-background-color: rgb(47, 47, 47);
+.history-tabs-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    background-color: rgb(47, 47, 47);
 }
 
 .history-tab {
@@ -156,7 +116,8 @@ background-color: rgb(47, 47, 47);
     transition: .5s ease;
     padding-top: .75%;
     background-color: rgb(47, 47, 47);
-    color:rgb(85, 85, 85);
+    color: rgb(85, 85, 85);
+
     &:hover {
         cursor: pointer;
     }
@@ -170,14 +131,51 @@ background-color: rgb(47, 47, 47);
     color: rgba(255, 255, 255, 0.823)
 }
 
-.transaction-row{
+.transaction-row {
     font-size: 75%;
     margin-left: 2.5%;
-    b{
-        color: rgb(130,130,130);
-    }
-    &.start {
-        margin-top: 1%;
+
+    b {
+        color: rgb(130, 130, 130);
     }
 
+    &.start {
+        // margin-top: 1%;
+    }
+
+    &:nth-of-type(1){
+        margin-top: 1%;
+    }
+}
+
+.button-wrapper{
+    margin-top: 3.5%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.cardInformation-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: space-evenly;
+    align-items: space-around;
+    cursor: pointer;
+    background-color: rgba(28, 28, 28, 0.8);
+    // background-image: url('./led-grid.png');
+    color: #bbbbbb;
+    border: none;
+    transition: .5s;
+    font-family: 'Ubuntu Mono', monospace;
+    text-transform: uppercase;
+
+    padding: 3% 4%;
+    font-size: 2vh;
+    font-weight: 300;
+
+    &:hover {
+        color: #f4f4f4;
+        transition: .5s ease;
+    }
 }
