--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -59,6 +59,7 @@
 
 .history-title {
     align-self: center;
+    color: rgb(30, 30, 30);
     color: rgb(40, 40, 40);
     text-transform: uppercase;
     font-size: large;
@@ -69,11 +70,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-content: center;
+    align-items: center;
     color: rgb(30, 30, 30);
     text-transform: uppercase;
     font-size: 70%;
-    font-weight: 300;
+    font-weight: 400;
+    border-top: 2px solid rgb(40, 40, 40);
+    margin-top: .25%;
+    margin-bottom: .25%;
+
 
     b {
         color: rgb(175, 175, 175);
@@ -148,8 +153,8 @@
     }
 }
 
-.button-wrapper{
-    margin-top: 3.5%;
+.button-wrapper{   
+    margin-top: 1.5%; 
     display:flex;
     flex-direction: row;
     justify-content: space-around;
@@ -159,8 +164,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-content: space-evenly;
-    align-items: space-around;
+    align-self: center;
     cursor: pointer;
     background-color: rgba(28, 28, 28, 0.8);
     // background-image: url('./led-grid.png');
@@ -171,7 +175,7 @@
     text-transform: uppercase;
 
     padding: 3% 4%;
-    font-size: 2vh;
+    font-size: 1.75vh;
     font-weight: 300;
 
     &:hover {
