updated seeds, minor card information styling

--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.css
@@ -184,8 +184,9 @@
 }
 
 .transaction-row {
-  font-size: 75%;
+  font-size: 85%;
   margin-left: 2.5%;
+  font-family: 'Ubuntu Mono', monospace !important;
 }
 
 .transaction-row b {
