--- a/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
+++ b/client/src/components/Collection/YourCards/CardInformation/CardInformation.scss
@@ -141,8 +141,9 @@
 }
 
 .transaction-row {
-    font-size: 75%;
+    font-size: 85%;
     margin-left: 2.5%;
+    font-family: 'Ubuntu Mono', monospace !important;
 
     b {
         color: rgb(130, 130, 130);
