--- a/client/src/components/Collection/YourCards/YourCards.scss
+++ b/client/src/components/Collection/YourCards/YourCards.scss
@@ -6,7 +6,7 @@
 }
 
 .yourCards-container {
-    margin-top: 5%;
+    margin-top: 6%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -64,28 +64,43 @@
 }
 
 .yourCards-filter-container {
-    z-index: 5;
-    margin-top: 3.5%;
-    margin-bottom: -5%;
+    position: fixed;
+    z-index: 200;
+    // margin-top: 3.5%;
+    // margin-bottom: -5%;
     display: flex;
     flex-direction: row;
+    align-items: center;
     // color: rgba(65, 65, 65, 0.729);
     color: rgba(102, 102, 102, 0.747);
-    top: 25%;
+    top: 5%;
+    background-color: transparent;
+    transition: .5s ease;
+    padding-left: 3.25%;
+
+
+    &:hover{
+        background-color: rgba(35, 35, 35, 0.898);
+        transition: .5s ease;
+        border-radius: 10px;
+        color: rgba(127, 126, 126, 0.747);
+
+    }
 }
 
 
 .yourCards-tab {
     align-self: center;
     justify-self: center;
-    height: 5vh;
+    // height: 5vh;
     font-size: larger;
     transition: .5s ease;
-    padding-top: .75%;
+    // padding-top: .75%;
     margin-right: 7.5%;
 
     &:hover {
         cursor: pointer;
+        color: rgba(209, 209, 209);
     }
 
     &:active {
@@ -98,11 +113,23 @@
 }
 
 .count-container {
+    position: fixed;
     display: flex;
     flex-direction: column;
-    margin-left: -20.5%;
-    margin-right: 22%;
+    top: 5%;
+    left: 25%;
     align-items: center;
+    transition: .5 ease;
+    color: rgba(102, 102, 102, 0.747);
+    // z-index: 200;
+
+
+
+    &:hover {
+        color: rgba(148, 148, 148, 0.747);
+        background-color: rgba(35, 35, 35, 0.898);
+        transition: .5 ease;
+    }
 
 
     &:nth-child(1) {
@@ -115,13 +142,13 @@
     align-self: center;
     justify-self: center;
     height: 5vh;
-    // font-size: 90%;
+    font-size: 110%;
     transition: .5s ease;
     padding-top: .75%;
     // margin-right: 7.5%;
 
     &:nth-of-type(1) {
-        margin-bottom: -35%;
+        margin-bottom: -32.75%;
     }
 
     b{
@@ -134,13 +161,21 @@
     background-color: rgba(54, 54, 54, 0.709);
     border: none;
     border-radius: 6px;
-    margin-bottom: 2.75%;
+    // margin-bottom: 2.75%;
     font-size: larger;
     margin-left: 5%;
     color: #fff;
+    padding-top:1%;
+    padding-bottom:1%;
     padding-left: 1.5%;
     padding-right: -2%;
+    transition: .5s ease;
 
+    &:focus{
+        transition: .5s ease;
+        background-color: rgba(35, 35, 35, 0.898);
+
+    }
 }
 
 
